--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "pinia": "^3.0.1",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
@@ -24,14 +26,15 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.22.0",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-vue": "~10.0.0",
+    "husky": "^8.0.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
-    "vue-tsc": "^2.2.8",
-    "husky": "^8.0.0"
+    "vue-tsc": "^2.2.8"
   }
 }
